@@ -4,6 +4,19 @@
 
 <sect1 id="ov-new1.7"><title>What's new and what changed in Cygwin 1.7</title>
 
+<sect2 id="ov-new1.7.29"><title>What's new and what changed from 1.7.28 to 1.7.29</title>
+
+<itemizedlist mark="bullet">
+
+<listitem><para>
+Allow quoting of arguments to the CYGWIN environment variable, i.e.,
+set CYGWIN=error_start="c:\bin\someprogram -T"
+</para></listitem>
+<listitem><para>
+Console screen clearing works more like xterm or mintty.
+</para></listitem>
+</sect2>
+
 <sect2 id="ov-new1.7.28"><title>What's new and what changed from 1.7.27 to 1.7.28</title>
 
 <itemizedlist mark="bullet">
